# lpbench

./: Makefile
benchmark/: .gitignore  CMakeLists.txt  README.md
benchmark/configs/: benchmark_methods.yaml  sim_sr100_balanced.yaml  sim_sr100_eqlen_balanced.yaml  sim_sr100_eqlen_gap.yaml  sim_sr100_gap.yaml  sim_sr150_balanced.yaml  sim_sr150_eqlen_balanced.yaml  sim_sr150_eqlen_gap.yaml  sim_sr150_gap.yaml
benchmark/data/: README.md  pairs_ed0.tsv  pairs_ed1.tsv  pairs_ed10.tsv  pairs_ed15.tsv  pairs_ed2.tsv  pairs_ed3.tsv  pairs_ed4.tsv  pairs_ed5.tsv  pairs_ed6.tsv  pairs_ed7.tsv  pairs_ed8.tsv  pairs_ed9.tsv
benchmark/docs/: benchmark_protocol.md  dataset_format.md  execution_paths.md  method_notes.md
benchmark/include/: bench_common.hpp  cpu_memory_path.hpp  dataset.hpp  leap_phase_api.hpp  leap_phase_interface.hpp  leap_raw_warm_kernel_interface.hpp  method_interface.hpp  perf_schema.hpp  timing.hpp
benchmark/include/bench/: affine_oracle.hpp  aligner_api.hpp  checksum.hpp  dataset.hpp  edit_oracle.hpp  timer.hpp
benchmark/results/: README.md  benchmark_summary.md  leap_phase_timing.md  leap_phase_timing.tsv  report.md  test_leap_phase_timing.tsv
benchmark/results/large/10000000_pairs_k0_ed0_0/benchmark/summary/: environment.txt
benchmark/results/large/10000000_pairs_k1_ed0_1/benchmark/summary/: environment.txt
benchmark/results/large/10000000_pairs_k3_ed0_3/benchmark/summary/: environment.txt
benchmark/results/large/1000000_pairs_k5_ed0_15/benchmark/summary/: environment.txt
benchmark/results/large_matrix/: large_matrix_report.md
benchmark/results/large_matrix/summary/: environment.txt
benchmark/results/processed/: SIM-SR100-EQLEN-BAL_validation.tsv  SIM-SR100-EQLEN-GAP_validation.tsv  leap_backend_audit.tsv  summary.tsv
benchmark/results/raw/: benchmark_raw.tsv  edlib_levenshtein_SIM-SR100-EQLEN-BAL_k1.tsv  edlib_levenshtein_SIM-SR100-EQLEN-BAL_k2.tsv  edlib_levenshtein_SIM-SR100-EQLEN-BAL_k3.tsv  edlib_levenshtein_SIM-SR100-EQLEN-BAL_k5.tsv  edlib_levenshtein_SIM-SR100-EQLEN-BAL_k8.tsv  ksw2_affine_SIM-SR100-EQLEN-GAP_T10.tsv  ksw2_affine_SIM-SR100-EQLEN-GAP_T15.tsv  ksw2_affine_SIM-SR100-EQLEN-GAP_T20.tsv  ksw2_affine_SIM-SR100-EQLEN-GAP_T30.tsv  ksw2_affine_SIM-SR100-EQLEN-GAP_T5.tsv  ksw2_levenshtein_SIM-SR100-EQLEN-BAL_k1.tsv  ksw2_levenshtein_SIM-SR100-EQLEN-BAL_k2.tsv  ksw2_levenshtein_SIM-SR100-EQLEN-BAL_k3.tsv  ksw2_levenshtein_SIM-SR100-EQLEN-BAL_k5.tsv  ksw2_levenshtein_SIM-SR100-EQLEN-BAL_k8.tsv  leap_affine_SIM-SR100-EQLEN-GAP_T10.tsv  leap_affine_SIM-SR100-EQLEN-GAP_T15.tsv  leap_affine_SIM-SR100-EQLEN-GAP_T20.tsv  leap_affine_SIM-SR100-EQLEN-GAP_T30.tsv  leap_affine_SIM-SR100-EQLEN-GAP_T5.tsv  leap_exact.tsv  leap_levenshtein_SIM-SR100-EQLEN-BAL_k1.tsv  leap_levenshtein_SIM-SR100-EQLEN-BAL_k2.tsv  leap_levenshtein_SIM-SR100-EQLEN-BAL_k3.tsv  leap_levenshtein_SIM-SR100-EQLEN-BAL_k5.tsv  leap_levenshtein_SIM-SR100-EQLEN-BAL_k8.tsv  lv89_levenshtein_SIM-SR100-EQLEN-BAL_k1.tsv  lv89_levenshtein_SIM-SR100-EQLEN-BAL_k2.tsv  lv89_levenshtein_SIM-SR100-EQLEN-BAL_k3.tsv  lv89_levenshtein_SIM-SR100-EQLEN-BAL_k5.tsv  lv89_levenshtein_SIM-SR100-EQLEN-BAL_k8.tsv  miniwfa_affine_SIM-SR100-EQLEN-GAP_T10.tsv  miniwfa_affine_SIM-SR100-EQLEN-GAP_T15.tsv  miniwfa_affine_SIM-SR100-EQLEN-GAP_T20.tsv  miniwfa_affine_SIM-SR100-EQLEN-GAP_T30.tsv  miniwfa_affine_SIM-SR100-EQLEN-GAP_T5.tsv  miniwfa_levenshtein_SIM-SR100-EQLEN-BAL_k1.tsv  miniwfa_levenshtein_SIM-SR100-EQLEN-BAL_k2.tsv  miniwfa_levenshtein_SIM-SR100-EQLEN-BAL_k3.tsv  (+14 more)
benchmark/results/reports/: SIM-SR100-EQLEN-BAL_validation.md  SIM-SR100-EQLEN-GAP_validation.md  benchmark_report.md  build_log.txt  leap_backend_audit.md  paper_result_section_draft.md
benchmark/results/summary/: environment.txt  leap_phase_report.md  report.md  report_method_timing.md  threshold_verify_summary.tsv
benchmark/results/sweep/leap_avx512_pairs_k5/: run_sweep.py
benchmark/results/tables/: table_affine_speed.md  table_affine_speed.tex  table_correctness.md  table_correctness.tex  table_correctness_issues.md  table_levenshtein_speed.md  table_levenshtein_speed.tex
benchmark/results/validation_diff/summary/: environment.txt  report_method_timing.md
benchmark/results/validation_forward_runner/summary/: environment.txt  report.md
benchmark/results/validation_perf/summary/: environment.txt  report_method_timing.md
benchmark/results/validation_small/summary/: environment.txt  report_method_timing.md
benchmark/scripts/: build_benchmark.py  build_deps.sh  collect_results.py  generate_dataset.py  generate_pairs.py  make_plots.py  make_tables.py  record_environment.sh  run_1m_avg.py  run_affine_bench.py  run_all.sh  run_benchmark.py  run_fixed_k_method_scaling.py  run_large_matrix.py  run_leap_phase_bench.py  run_leap_raw_warm_kernel.py  run_levenshtein_bench.py  run_perf_stat.py  run_selected_methods.py  run_threshold_bench.py  run_threshold_verify_bench.py  summarize_results.py  validate_dataset.py
benchmark/scripts/benchmark/results/raw/: leap_levenshtein_SIM-SR100-EQLEN-BAL_k1.tsv  leap_levenshtein_SIM-SR100-EQLEN-BAL_k2.tsv  leap_levenshtein_SIM-SR100-EQLEN-BAL_k3.tsv  leap_levenshtein_SIM-SR100-EQLEN-BAL_k5.tsv  leap_levenshtein_SIM-SR100-EQLEN-BAL_k8.tsv
benchmark/src/: affine_oracle.cpp  bench_main.cpp  bench_methods.cpp  checksum.cpp  dataset_generate.cpp  dataset_io.cpp  edit_oracle.cpp  leap_avx2_bridge.cpp  leap_avx512_bridge.cpp  leap_backend.cpp  leap_backend_api.h  leap_phase_avx2.cpp  leap_phase_avx512.cpp  leap_phase_bench.cpp  leap_raw_warm_kernel_bench.cpp  method_leap_avx2.cpp  method_leap_avx512.cpp  method_lv89.cpp  method_miniwfa.cpp  method_wfa2.cpp  threshold_bench.cpp  threshold_verify_bench.cpp  timer.cpp  trusted_edit_distance.cpp
benchmark/src/wrappers/: edlib_wrapper.cpp  ksw2_wrapper.cpp  leap_bit_convert_shim.cpp  leap_wrapper.cpp  lv89_wrapper.cpp  miniwfa_wrapper.cpp  oracle_wrapper.cpp  parasail_wrapper.cpp  wfa2_wrapper.cpp
benchmark/wrappers/: bench_common.hpp  edlib_gt.cpp  leap_bench.cpp  lv89_bench.cpp  miniwfa_bench.cpp  wfa2_bench.cpp
(+18 files in other folders)
